补充min max系列API的注释和单测